log
Sat, May  3, 2025  9:05:43 PM: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sat, May  3, 2025  9:10:04 PM: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:62:15: error: unused variable 'parent' [-Werror=unused-variable]
     TreeNode* parent = NULL;
               ^~~~~~
treemap.c:61:15: error: unused variable 'node' [-Werror=unused-variable]
     TreeNode* node = tree->root;
               ^~~~
cc1.exe: all warnings being treated as errors
10132f4
Sat, May  3, 2025  9:10:47 PM: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
test.c: In function 'insertTreeMap':
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:4:0:
treemap.c:62:15: error: variable 'parent' set but not used [-Werror=unused-but-set-variable]
     TreeNode* parent = NULL;
               ^~~~~~
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
9c996bb
Sat, May  3, 2025  9:11:37 PM: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  4|7
total_score: 5/70
59bc00e
Sat, May  3, 2025  9:12:32 PM: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  6|6
total_score: 15/70
3464b64
Sat, May  3, 2025  9:13:25 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
3f5f410
Sat, May  3, 2025  9:13:48 PM: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
5730c50
Sat, May  3, 2025  9:15:56 PM: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  8|5
total_score: 15/70
aa0b856
Sat, May  3, 2025  9:22:25 PM: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
Compilation failed
test.c: In function 'removeNode':
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
b0b2934
Sat, May  3, 2025  9:22:57 PM: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  8|5
total_score: 15/70
a6648b3
Sat, May  3, 2025  9:25:12 PM: 
 treemap.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
Compilation failed
test.c: In function 'searchTreeMap':
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
test.c:606:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
e5b6a2e
Sat, May  3, 2025  9:26:05 PM: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c:154:8: error: redefinition of 'searchTreeMap'
 Pair * searchTreeMap(TreeMap * tree, void* key) {
        ^~~~~~~~~~~~~
treemap.c:133:8: note: previous definition of 'searchTreeMap' was here
 Pair * searchTreeMap(TreeMap * tree, void* key) {
        ^~~~~~~~~~~~~
110a015
Sat, May  3, 2025  9:27:39 PM: 
 treemap.c | 7 -------
 1 file changed, 7 deletions(-)
Compilation failed
C:\Users\rafae\AppData\Local\Temp\cca9k6FA.o: In function `erase_test1':
C:\Users\rafae\OneDrive\Escritorio\CODIGOS 2025\lab-4-rboles-binarios-de-b-squeda-rafactsss-1/test.c:267: undefined reference to `eraseTreeMap'
C:\Users\rafae\AppData\Local\Temp\cca9k6FA.o: In function `erase_test2':
C:\Users\rafae\OneDrive\Escritorio\CODIGOS 2025\lab-4-rboles-binarios-de-b-squeda-rafactsss-1/test.c:281: undefined reference to `eraseTreeMap'
C:\Users\rafae\AppData\Local\Temp\cca9k6FA.o: In function `erase_test3':
C:\Users\rafae\OneDrive\Escritorio\CODIGOS 2025\lab-4-rboles-binarios-de-b-squeda-rafactsss-1/test.c:302: undefined reference to `eraseTreeMap'
collect2.exe: error: ld returned 1 exit status
bd01fba
Sat, May  3, 2025  9:29:49 PM: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  18|3
total_score: 40/70
8b6b34a
Sat, May  3, 2025  9:33:36 PM: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
test.c: In function 'upperBound':
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:4:0:
treemap.c:164:15: error: unused variable 'candidate' [-Werror=unused-variable]
     TreeNode* candidate = NULL;
               ^~~~~~~~~
test.c:606:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
dd84ce3
Sat, May  3, 2025  9:35:25 PM: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:164:15: error: variable 'candidate' set but not used [-Werror=unused-but-set-variable]
     TreeNode* candidate = NULL;
               ^~~~~~~~~
treemap.c:181:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
8975439
Sat, May  3, 2025  9:35:45 PM: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  22|2
total_score: 50/70
10b7e4f
Sat, May  3, 2025  9:36:39 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:190:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
d6117c0
Sat, May  3, 2025  9:36:57 PM: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  24|1
total_score: 55/70
cfad4fb
Sat, May  3, 2025  9:38:11 PM: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
Compilation failed
test.c: In function 'nextTreeMap':
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
test.c:606:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
679ce53
Sat, May  3, 2025  9:38:40 PM: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:223:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
7476290
